redactor/static/redactor/css/redactor.css
/* ... */
.redactor-editor object,
.redactor-editor embed,
.redactor-editor video,
.redactor-editor img {
  max-width: 100%;
  width: auto;
}
.redactor-editor video,
.redactor-editor img {
  height: auto;
}
.redactor-editor div,
.redactor-editor p,
.redactor-editor ul,
.redactor-editor ol,
.redactor-editor table,
.redactor-editor dl,
.redactor-editor figure,
.redactor-editor blockquote,
.redactor-editor pre {
  margin: 0;
  margin-bottom: 15px;
  border: none;
  background: none;
  box-shadow: none;
}
.redactor-editor iframe,
.redactor-editor object,
.redactor-editor hr {
  margin-bottom: 15px;
}
.redactor-editor iframe {
  width: auto;
}
.redactor-editor blockquote {
  margin-left: 1.6em !important;
  padding-left: 0;
  color: #777;
  font-style: italic;
}
.redactor-editor ul,
.redactor-editor ol {
  padding-left: 2em;
}
.redactor-editor ul ul,
.redactor-editor ol ol,
.redactor-editor ul ol,
.redactor-editor ol ul {
  margin: 2px;
  padding: 0;
  padding-left: 2em;
  border: none;
}
.redactor-editor dl dt {
  font-weight: bold;
}
.redactor-editor dd {
  margin-left: 1em;
}
.redactor-editor table {
  border-collapse: collapse;
  font-size: 1em;
  width: 100%;
}
.redactor-editor table td,
.redactor-editor table th {
  padding: 5px;
  border: 1px solid #ddd;
  vertical-align: top;
}
.redactor-editor table thead td,
.redactor-editor table th {
  font-weight: bold;
  border-bottom-color: #888;
}
.redactor-editor code {
  background-color: #d8d7d7;
}
.redactor-editor pre {
  overflow: auto;
  padding: 1em;
  border: 1px solid #ddd;
  border-radius: 3px;
  background: #f8f8f8;
  white-space: pre;
  font-size: 90%;
}
.redactor-editor hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
}
.redactor-editor h1,
.redactor-editor h2,
.redactor-editor h3,
.redactor-editor h4,
.redactor-editor h5,
.redactor-editor h6 {
  font-weight: bold;
  color: #0000;
  padding: 0;
  background: none;
  text-rendering: optimizeLegibility;
  margin: 0 0 .5em 0;
}
.redactor-editor h1,
.redactor-editor h2,
.redactor-editor h3,
.redactor-editor h4 {
  line-height: 1.3;
}
.redactor-editor h1 {
  font-size: 36px;
}
.redactor-editor h2 {
  font-size: 24px;
  margin-bottom: .7em;
}
.redactor-editor h3 {
  font-size: 21px;
}
.redactor-editor h4 {
  font-size: 18px;
}
.redactor-editor h5 {
  font-size: 16px;
}
.redactor-editor h6 {
  font-size: 12px;
  text-transform: uppercase;
}

